# llm-verification-of-eclass

./: .gitignore  CONTRIBUTING.rst  LICENSE  README.md  README.rst  experiment-2-similarity-threshold-properties.txt  pyproject.toml
.github/workflows/: ci.yml
continuous_integration/: check_help_in_readme.py  check_version_consistent.py  precommit.py
llm_verification_of_eclass/: __init__.py  __main__.py  main.py
llm_verification_of_eclass/common/: logger.py
llm_verification_of_eclass/experiments/: definition_comparison.py  find_placeholder_definitions.py  llm_definition_comparison.py  similarity_based_threshold.py  similarity_clustering.py  similarity_threshold.py  synthetic_similarity_threshold.py
llm_verification_of_eclass/experiments/prompts/: CHANGELOG.md  v1.py  v2.py  v3.py  v4.py
llm_verification_of_eclass/preprocessing/: csv_1_extract.py  csv_2_duplicate_pairs.py  embeddings.py
