[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-verification-of-eclass"
# NOTE (mristin):
# Do not forget to sync with __init__.py!
version = "0.0.1"

description = "Verify the data quality of eClass with the LLMs."
readme = "README.rst"
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

authors = [
  { name = "Ablay Abdimalinov", email = "ablay.abdimalinov@nu.edu.kz" }
]

dependencies = [
  "icontract>=2,<3",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy==1.18.1",
  "pylint==3.3.8",
]

[project.scripts]
llm-verification-of-eclass = "llm_verification_of_eclass.main:entry_point"

[project.urls]
repository = "https://github.com/mristin/llm-verification-of-eclass"

[tool.setuptools.packages.find]
include = ["llm_verification_of_eclass"]
exclude = ["continuous_integration", "tests"]

# Development tooling
[tool]
[tool.black]
line-length = 88

[tool.pylint]
disable = [
  "unnecessary-lambda", "no-else-raise", "too-few-public-methods", "no-else-return",
  "too-many-locals", "too-many-branches", "too-many-return-statements",
  "duplicate-code", "broad-exception-caught", "unnecessary-comprehension",
  "too-many-statements", "too-many-lines", "use-dict-literal", "invalid-name",
  "too-many-arguments", "too-many-positional-arguments",
  "too-many-instance-attributes", "unnecessary-negation",
  "too-many-nested-blocks"
]

[tool.mypy]
python_version = "3.10"
strict = true
