[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-verification-of-eclass"
# NOTE (mristin):
# Do not forget to sync with __init__.py!
version = "0.0.1"

description = "Verify the data quality of eClass with the LLMs."
readme = "README.rst"
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

authors = [
  { name = "Ablay Abdimalinov", email = "ablay.abdimalinov@nu.edu.kz" }
]

dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.12.1",
  "astroid==3.3.11",
  "asttokens==2.4.1",
  "black==25.1.0",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "dill==0.4.0",
  "distro==1.9.0",
  "filelock==3.20.0",
  "fonttools==4.60.1",
  "fsspec==2025.10.0",
  "h11==0.16.0",
  "hf-xet==1.2.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==0.36.0",
  "icontract==2.7.2",
  "idna==3.11",
  "isort==6.1.0",
  "jinja2==3.1.6",
  "jiter==0.12.0",
  "joblib==1.5.2",
  "kiwisolver==1.4.9",
  "llvmlite==0.46.0",
  "markupsafe==3.0.3",
  "matplotlib==3.10.7",
  "mccabe==0.7.0",
  "mpmath==1.3.0",
  "mypy==1.18.1",
  "mypy-extensions==1.1.0",
  "networkx==3.5",
  "numba==0.63.1",
  "numpy==2.3.5",
  "openai==2.15.0",
  "packaging==25.0",
  "pandas==2.3.3",
  "pandas-stubs==2.3.2.250926",
  "pathspec==0.12.1",
  "pillow==12.0.0",
  "platformdirs==4.5.0",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pylint==3.3.8",
  "pynndescent==0.5.13",
  "pyparsing==3.2.5",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "pytz==2025.2",
  "pyyaml==6.0.3",
  "regex==2025.11.3",
  "requests==2.32.5",
  "safetensors==0.6.2",
  "scikit-learn==1.7.2",
  "scipy==1.16.3",
  "seaborn==0.13.2",
  "sentence-transformers==5.1.2",
  "setuptools==80.9.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sympy==1.14.0",
  "threadpoolctl==3.6.0",
  "tokenizers==0.22.1",
  "tomlkit==0.13.3",
  "torch==2.9.1",
  "tqdm==4.67.1",
  "transformers==4.57.1",
  "types-pytz==2025.2.0.20251108",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "tzdata==2025.2",
  "umap-learn==0.5.9.post2",
  "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy==1.18.1",
  "pylint==3.3.8",
  "pandas-stubs>=2.3.2.250926", # <--- ADDED pandas-stubs to the correct dependency group
]

[project.scripts]
llm-verification-of-eclass = "llm_verification_of_eclass.main:entry_point"

[project.urls]
repository = "https://github.com/mristin/llm-verification-of-eclass"

[tool.setuptools.packages.find]
include = ["llm_verification_of_eclass"]
exclude = ["continuous_integration", "tests"]

# Development tooling
[tool]
[tool.black]
line-length = 88

[tool.pylint]
disable = [
  "unnecessary-lambda", "no-else-raise", "too-few-public-methods", "no-else-return",
  "too-many-locals", "too-many-branches", "too-many-return-statements",
  "duplicate-code", "broad-exception-caught", "unnecessary-comprehension",
  "too-many-statements", "too-many-lines", "use-dict-literal", "invalid-name",
  "too-many-arguments", "too-many-positional-arguments",
  "too-many-instance-attributes", "unnecessary-negation",
  "too-many-nested-blocks"
]

[tool.mypy]
python_version = "3.11"
strict = true

# [dependency-groups]
# dev = [
#     "pandas-stubs>=2.3.2.250926",
# ]